# order-management-system

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  postman_collection.json  pyproject.toml
alembic/: env.py
alembic/versions/: 284cc12f0bb5_create_users_orders_refresh_tokens.py
src/: celery_tasks.py
src/auth/: dependencies.py  routes.py  schema.py  services.py  utils.py
src/config/: settings.py
src/database/: db.py  models.py
src/orders/: routes.py  schema.py  services.py
